--- a/examples/energy-gateway-app/esp32/main/CMakeLists.txt
+++ b/examples/energy-gateway-app/esp32/main/CMakeLists.txt
@@ -23,6 +23,7 @@ get_filename_component(APP_COMMON_GEN_DIR ${CHIP_ROOT}/zzz_generated/app-common/
 set(PRIV_INCLUDE_DIRS_LIST
   "${CHIP_ROOT}/examples/providers"
   "${ENERGY_GATEWAY_DIR}/commodity-price/include"
+  "${ENERGY_GATEWAY_DIR}/commodity-metering/include"
   "${ENERGY_GATEWAY_DIR}/common/include"
   "${ENERGY_GATEWAY_DIR}/electrical-grid-conditions/include"
   "${ENERGY_GATEWAY_DIR}/meter-identification/include"
