--- a/.github/workflows/examples-esp32.yaml
+++ b/.github/workflows/examples-esp32.yaml
@@ -122,6 +122,12 @@ jobs:
             - name: Build example Lighting App (external platform)
               run: scripts/examples/esp_example.sh lighting-app sdkconfig.ext_plat.defaults
 
+            - name: Build example Energy Gateway App
+              run: scripts/examples/esp_example.sh energy-gateway-app sdkconfig.defaults
+
+            - name: Build example Energy Management App
+              run: scripts/examples/esp_example.sh energy-management-app sdkconfig.defaults              
+
             - name: Uploading Size Reports
               uses: ./.github/actions/upload-size-reports
               if: ${{ !env.ACT }}
