--- a/src/platform/nxp/crypto/se05x/BUILD.gn
+++ b/src/platform/nxp/crypto/se05x/BUILD.gn
@@ -14,10 +14,12 @@
 
 import("//build_overrides/chip.gni")
 import("//build_overrides/nlassert.gni")
+import("//build_overrides/nxp_sdk.gni")
 import("${chip_root}/build/chip/buildconfig_header.gni")
 import("${chip_root}/src/crypto/crypto.gni")
 import("${chip_root}/src/platform/device.gni")
 import("${chip_root}/src/platform/nxp/crypto/se05x/args.gni")
+import("${nxp_sdk_build_root}/nxp_sdk.gni")
 
 if (chip_crypto == "platform") {
   import("//build_overrides/mbedtls.gni")
