--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -80,6 +80,7 @@ if (chip_build_tests) {
       "${chip_root}/src/transport/tests",
       "${chip_root}/src/tracing/esp32_diagnostic_trace/tests",
       "${chip_root}/src/app/clusters/push-av-stream-transport-server/tests",
+      "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/tests",
       "${chip_root}/src/srp/tests",
     ]
 
