--- a/src/app/persistence/BUILD.gn
+++ b/src/app/persistence/BUILD.gn
@@ -16,6 +16,8 @@ import("//build_overrides/chip.gni")
 
 source_set("persistence") {
   sources = [
+    "AttributePersistence.cpp",
+    "AttributePersistence.h",
     "AttributePersistenceProvider.h",
     "PascalString.h",
   ]
