--- a/src/app/persistence/BUILD.gn
+++ b/src/app/persistence/BUILD.gn
@@ -16,12 +16,16 @@ import("//build_overrides/chip.gni")
 
 source_set("persistence") {
   sources = [
+    "AttributePersistence.cpp",
+    "AttributePersistence.h",
     "AttributePersistenceProvider.h",
     "PascalString.h",
   ]
 
   public_deps = [
+    "${chip_root}/src/app:attribute-access",
     "${chip_root}/src/app:paths",
+    "${chip_root}/src/app/data-model-provider",
     "${chip_root}/src/lib/support:span",
   ]
 }
