--- a/src/app/persistence/tests/BUILD.gn
+++ b/src/app/persistence/tests/BUILD.gn
@@ -17,12 +17,26 @@ import("//build_overrides/chip.gni")
 
 import("${chip_root}/build/chip/chip_test_suite.gni")
 
+source_set("fakes") {
+  sources = [
+    "RamAttributePersistenceProvider.cpp",
+    "RamAttributePersistenceProvider.h",
+  ]
+
+  public_deps = [ "${chip_root}/src/app/persistence" ]
+}
+
 chip_test_suite("tests") {
   output_name = "appPersistenceTests"
 
-  test_sources = [ "TestPascalString.cpp" ]
+  test_sources = [
+    "TestAttributePersistence.cpp",
+    "TestPascalString.cpp",
+  ]
 
   public_deps = [
+    ":fakes",
+    "${chip_root}/src/app/data-model-provider/tests:encode-decode",
     "${chip_root}/src/app/persistence",
     "${chip_root}/src/lib/core:string-builder-adapters",
     "${chip_root}/src/lib/support:testing",
