Update the legacy event logging as well, to show size savings

--- a/src/app/BUILD.gn
+++ b/src/app/BUILD.gn
@@ -515,6 +515,7 @@ static_library("app") {
     "CommandResponseHelper.h",
     "CommandResponseSender.cpp",
     "EventLogging.h",
+    "EventLogging.cpp",
     "EventManagement.cpp",
     "EventManagement.h",
     "FailSafeContext.cpp",
